--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ docs/merfish_data/mouse_brain_map_BrainReceptorShowcase_Slice2_Replicate3_STalig
 *.mhd
 *.xml
 *.zip
+docs/atlasVolume/estriat-Segment_15861-label.zraw
